# stegonosaurus

./: README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  python-publish.yml  test.yml
stegonosaurus/: stego_exceptions.py  stego_functions.py  stego_utils.py  stegoexceptions.py  stegofunctions.py  stegoutils.py
tests/: conftest.py  test_stego_functions.py  test_stego_utils.py  test_stegofunctions.py  test_stegoutils.py
