[metadata]
name = stegonosaurus
description = Steganography functions packaged in a convenient python wheel.
long_description_content_type = text/markdown
url = https://github.com/Geada734/stegonosaurus
project_urls =
    Bug Tracker = https://github.com/Geada734/stegonosaurus/issues
    Changelog = https://github.com/Geada734/stegonosaurus/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.6
