[metadata]
name = stegonosaurus
description = Steganography functions packaged in a convenient python wheel.
long_description_content_type = text/markdown
url = https://github.com/Geada734/stegonosaurus
project_urls =
    Bug Tracker = https://github.com/Geada734/stegonosaurus/issues
    Changelog = https://github.com/Geada734/stegonosaurus/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = stegonosaurus
packages = find:
python_requires = >=3.6

[options.packages.find]
where = stegonosaurus

[options.entry_points]
console_scripts =
    gha_python_packaging_demo = stegonosaurus.app:entry_point