[metadata]
name = stegonosaurus
description = Steganography functions packed in a convenient wheel. This library helps encode and decode messages into and out of multi-band .png images.
long_description_content_type = text/markdown
url = https://github.com/Geada734/stegonosaurus
project_urls =
    Bug Tracker = https://github.com/Geada734/stegonosaurus/issues
    Changelog = https://github.com/Geada734/stegonosaurus/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    stegonosaurus = stegonosaurus.app:entry_point